--- a/guias/guia3/Guia_3_ClasificacionBinaria.ipynb
+++ b/guias/guia3/Guia_3_ClasificacionBinaria.ipynb
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [
         {
@@ -440,14 +440,15 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 91,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "exactitud = df.groupby(['target','pred']).size()\n",
-        "exactitud[0]"
+        "exactitud[0]\n",
+        "\n"
       ]
     },
     {
